syntax = "proto3";

package akuity.io.kargo.service.v1alpha1;

option go_package = "github.com/akuity/kargo/pkg/api/service/v1alpha1;svcv1alpha1";

import "v1alpha1/generated.proto";

service KargoService {
  rpc CreateEnvironment(CreateEnvironmentRequest) returns (CreateEnvironmentResponse);
  rpc ListEnvironments(ListEnvironmentsRequest) returns (ListEnvironmentsResponse);
  rpc GetEnvironment(GetEnvironmentRequest) returns (GetEnvironmentResponse);
  rpc DeleteEnvironment(DeleteEnvironmentRequest) returns (DeleteEnvironmentResponse);
  rpc PromoteEnvironment(PromoteEnvironmentRequest) returns (PromoteEnvironmentResponse);
  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse);
}

message CreateEnvironmentRequest {
  string project = 1;
  string name = 2;
  github.com.akuity.kargo.pkg.api.v1alpha1.EnvironmentSpec spec = 3;
}

message CreateEnvironmentResponse {
  github.com.akuity.kargo.pkg.api.v1alpha1.Environment environment = 1;
}

message ListEnvironmentsRequest {
  string project = 1;
}

message ListEnvironmentsResponse {
  repeated github.com.akuity.kargo.pkg.api.v1alpha1.Environment environments = 1;
}

message GetEnvironmentRequest {
  string project = 1;
  string name = 2;
}

message GetEnvironmentResponse {
  github.com.akuity.kargo.pkg.api.v1alpha1.Environment environment = 1;
}

message DeleteEnvironmentRequest {
  string project = 1;
  string name = 2;
}

message DeleteEnvironmentResponse {
  /* explicitly empty */
}

message PromoteEnvironmentRequest {
  string project = 1;
  string name = 2;
  string state = 3;
}

message PromoteEnvironmentResponse {
  github.com.akuity.kargo.pkg.api.v1alpha1.Promotion promotion = 1;
}

message ListProjectsRequest {
  /* explicitly empty */
}

message ListProjectsResponse {
  repeated Project projects = 1;
}

message Project {
  string name = 1;
}